# wzrysjglz

./: .gitignore  README.md  index.html  main.py  pyproject.toml  新建 文本文档.txt
backend/: admin.html  app.py
core/: config.py  database.py  exceptions.py
models/: guide.py  seed.py
web/routes/: api.py  pages.py
web/templates/: admin.html  detail.html  index.html  list.html
