[project]
name = "wzrysjglz"
version = "2.0.0"
description = "王者荣耀世界攻略站"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "loguru>=0.7",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]
